add algo package and fix font issue

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{article}
 
 \usepackage[sans]{myctex}
+\usepackage{algo}
 
 
 \title{思源黑体 + FiraGO}
@@ -31,5 +32,15 @@ s.t.&   &   (1-\delta_x - \delta_y) d^2(x,y)\leq \|v_x-v_y\|^2 &\leq (c^2+(\delt
 \end{aligned}
 \end{equation}
 
+\begin{figure}
+\begin{algo}
+sdf\\
+\quad sdf\\
+return ss
+\end{algo}
+\caption{this is a fig 这是图}
+\end{figure}
+\textsc{Sans}
+\texttt{monolM}
 
 \end{document}
