fix italic/bold CJK font warnings

--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@ $MATH$
 \section{is this bold $MATH \Z$?}
 \section{这是bold $\text{你好abc}\R$?}
 \begin{theorem}[sbada]
-    aaa
+    aaa 中文
 \end{theorem}
 
 \begin{equation}
