--- a/myctex.sty
+++ b/myctex.sty
@@ -12,14 +12,14 @@
 
 % Now use the conditional
 \ifmyctex@sans
-\setCJKmainfont{Source Han Sans SC}
+\setCJKmainfont{Source Han Sans SC}[BoldFont=*, ItalicFont=*]
 \setCJKsansfont{Source Han Sans SC}
 \setCJKmonofont{Source Han Sans SC}
 \usepackage[fira]{fontsetup}
 \usepackage{FiraMono}
 
 \else
-\setCJKmainfont{Source Han Serif SC}
+\setCJKmainfont{Source Han Serif SC}[BoldFont=*, ItalicFont=*]
 \setCJKsansfont{Source Han Serif SC}
 \setCJKmonofont{Source Han Serif SC}
 \RequirePackage[charter]{mathdesign} % math font only for serif mode
