\usepackage[fira]{fontsetup} works well. no need to use unicode mathbb

--- a/myctex.sty
+++ b/myctex.sty
@@ -121,13 +121,13 @@
 %  I give up.  These are in the wrong font, but my kludged versions 
 %  LOOK like kludges, especially \Z, \Q, and \C.
 %
-\def\Real{ℝ}
-\def\Proj{ℙ}
-\def\Hyper{ℍ}
-\def\Integer{ℤ}
-\def\Natural{ℕ}
-\def\Complex{ℂ}
-\def\Rational{ℚ}
+\def\Real{\mathbb{R}}
+\def\Proj{\mathbb{P}}
+\def\Hyper{\mathbb{H}}
+\def\Integer{\mathbb{Z}}
+\def\Natural{\mathbb{N}}
+\def\Complex{\mathbb{C}}
+\def\Rational{\mathbb{Q}}
 
 \let\N\Natural
 \let\Q\Rational
