fix bold cjk font.

--- a/myctex.sty
+++ b/myctex.sty
@@ -12,7 +12,7 @@
 
 % Now use the conditional
 \ifmyctex@sans
-\setCJKmainfont{Source Han Sans SC}[BoldFont=*, ItalicFont=*]
+\setCJKmainfont{Source Han Sans SC}
 \setCJKsansfont{Source Han Sans SC}
 \setCJKmonofont{Source Han Sans SC}
 \RequirePackage[fira]{fontsetup}
@@ -20,7 +20,7 @@
 \setmathfont{Fira Math}[range=\setminus]
 
 \else
-\setCJKmainfont{Source Han Serif SC}[BoldFont=*, ItalicFont=*]
+\setCJKmainfont{Source Han Serif SC}
 \setCJKsansfont{Source Han Serif SC}
 \setCJKmonofont{Source Han Serif SC}
 \RequirePackage[charter]{mathdesign} % math font only for serif mode
