--- a/main.tex
+++ b/main.tex
@@ -8,50 +8,121 @@
 \author{丛宇}
 \date{\today}
 
+\usepackage{bm}
 \begin{document}
 \maketitle
+\begin{center}
+{\Large{\bfseries Test of the font {\scshape Fira Math}.}}\bigskip\\
+{\Large\verb|\usepackage[fira]{fontsetup}|}
+%\medskip\\
+%{\verb|\usepackage[romanfamily=bright-osf]{lucimatx}|} if you want old-style figures (like this: \oldstylenums{1695})\\
+\end{center}
 
-test math font.
-\(
-G'=(V,E)
-\)
+The default math mode font is $Math\ Italic$. This should not be
+confused with ordinary \emph{Text Italic} -- notice the different spacing\,!
+\verb|\mathbf| produces bold roman letters: $ \mathbf{abcABC} $.
+If you wish to embolden complete formulas,
+use the \verb|\boldmath| command \emph{before} going into math mode.  
+This changes the default math fonts to bold. 
+ 
+\begin{tabular}{ll}
+\texttt{normal}   & $ x = 2\pi \Rightarrow x \simeq 6.28 $\\
+\texttt{mathbf}   & $\mathbf{x} = 2\pi \Rightarrow \mathbf{x} \simeq 6.28 $\\
+\texttt{boldmath} & {\boldmath $x = \mathbf{2}\pi \Rightarrow x 
+                   \simeq{\mathbf{6.28}}              $}\\
+\end{tabular}
+\smallskip
 
-测试中文
+Greek is available in upper and lower case:
+$\alpha,\beta \dots \Omega$, and there are special
+symbols such as $ \hbar$.
+%The following letters should be upright: $\upGamma, \upDelta\dots \upOmega$.
+Digits in formulas $1, 2, 3\dots$ may differ from those in text: 1, 2, 3\dots
 
-\textbf{粗中文a}
+There is a calligraphic alphabet \verb|\mathcal| for upper case letters
+$ \mathcal{ABCDE}\dots $.
+%and there are letters for number sets: $\mathbb{A\dots Z} $, which are produced using \verb|\mathbb|.
 
-$\mathbf{Bold Math}$
-
-\section{$Bold \; MATH \Z\R \Q$ in title  $\mathbf{Bold Math \Z \R \Q}$?}
-\section{这是bold $\text{你好abc}\R$?}
-\begin{theorem}[sbada]
-    aaa 中文
-\end{theorem}
-\begin{proof}
-    test setminus and qed $A\setminus B$
-\end{proof}
-
+\noindent
+This font has both lining figures (13589, default) and oldstyle figures (\oldstylenums{13589}, select with {\tt$\backslash$oldstylenums\{..\}}). 
+%{\em \swshape{I}t \swshape{A}lso \swshape{H}as \swshape{S}wash \swshape{I}talics} {\tt$\backslash$swshape\{..\}}
+\\
+{\fontseries{c}\selectfont there is also a condensed weight} {\tt$\backslash$fontseries\{c\}$\backslash$selectfont}
+ 
 \begin{equation}
-\begin{aligned}
-\min&   &   \sum_x \delta_x&    &   &\\
-s.t.&   &   (1-\delta_x - \delta_y) d^2(x,y)\leq \|v_x-v_y\|^2 &\leq (c^2+(\delta_x+\delta_y)f(k)) d^2(x,y) &   &\forall x,y\in X\\
-    &   &   \delta_x\in [0,1], v_x&\in \R^p   &   &\forall x\in X
-\end{aligned}
+  \phi(t)=\frac{1}{\sqrt{2\pi}}
+  \int^t_0 e^{-x^2/2} dx 
 \end{equation}
 
-\begin{figure}
-\begin{algo}
-sdf\\
-\quad sdf\\
-return ss
-\end{algo}
-\caption{this is a fig 这是图}
-\end{figure}
+\begin{equation}
+  \prod_{j\geq 0}
+  \left(\sum_{k\geq 0}a_{jk} z^k\right) 
+= \sum_{k\geq 0} z^n
+  \left( \sum_{{k_0,k_1,\ldots\geq 0}
+          \atop{k_0+k_1+\ldots=n}    }
+        a{_0k_0}a_{1k_1}\ldots  \right) 
+\end{equation}
 
-\textsc{Small Capital}
+\begin{equation}
+\pi(n) = \sum_{m=2}^{n}
+  \left\lfloor \left(\sum_{k=1}^{m-1}
+       \lfloor(m/k)/\lceil m/k\rceil 
+       \rfloor \right)^{-1}
+  \right\rfloor
+\end{equation}
 
-\textit{italic}
+\begin{equation}
+\{\underbrace{%
+    \overbrace{\mathstrut a,\ldots,a}^{k\ a's},
+    \overbrace{\mathstrut b,\ldots,b}^{l\ b's}}
+  _{k+1\ \mathrm{elements}}                   \}
+\end{equation}
 
-\texttt{mono}
+\begin{displaymath}
+\mbox{W}^+\
+\begin{array}{l}
+\nearrow\raise5pt\hbox{$\mu^+ + \nu_{\mu}$}\\
+\rightarrow         \pi^+ +\pi^0         \\[5pt]
+\rightarrow \kappa^+ +\pi^0              \\
+\searrow\lower5pt\hbox{$\mathrm{e}^+ 
+          +\nu_{\scriptstyle\mathrm{e}}$}
+\end{array}
+\end{displaymath}
 
+\begin{displaymath}
+\frac{\pm
+\left|\begin{array}{ccc}
+x_1-x_2  & y_1-y_2 & z_1-z_2 \\
+l_1      & m_1     & n_1     \\
+l_2      & m_2     & n_2
+\end{array}\right|}{
+\sqrt{\left|\begin{array}{cc}l_1&m_1\\
+l_2&m_2\end{array}\right|^2
++     \left|\begin{array}{cc}m_1&n_1\\
+n_1&l_1\end{array}\right|^2
++     \left|\begin{array}{cc}m_2&n_2\\
+n_2&l_2\end{array}\right|^2}}
+\end{displaymath}
+
+text accents: \`{a},\'{a},\"{a},\^{a}
+may differ from math accents:
+\begin{displaymath}
+\mbox{ acute=}\acute{a}
+\mbox{ grave=}\grave{a}
+\mbox{ ddot=}\ddot {a}
+\mbox{ tilde=}\tilde{a}
+\mbox{ bar=}\bar  {a}
+\mbox{ breve=}\breve{a}
+\mbox{ check=}\check{a}
+\mbox{ hat=}\hat  {a}
+\mbox{ vec=}\vec  {a}
+\mbox{ dot=}\dot  {a}
+\end{displaymath}
+
+dotlessi=\i\ 
+dotlessj=\j\ 
+dagger=$\dagger$\ \ \ 
+% \verb|\bm{x}|\ $\bm{x}$ 
+
+%$\hbar$ $\hslash$
 \end{document}
