--- a/xenotes.sty
+++ b/xenotes.sty
@@ -26,12 +26,14 @@
 \setCJKsansfont{Source Han Serif SC}
 \setCJKmonofont{Source Han Serif SC}
 \RequirePackage[charter]{mathdesign} % math font only for serif mode
+\RequirePackage{amsmath}
+\RequirePackage{eucal}
+\RequirePackage{microtype}
 \fi
 
 % \setCJKmainfont{SourceHanSerifSC-Regular.otf}[BoldFont={SourceHanSerifSC-Bold.otf}, ItalicFont=SourceHanSerifSC-Regular.otf]
 
 \RequirePackage[margin=1in]{geometry}
-\RequirePackage{amsmath}
 \RequirePackage[dvipsnames]{xcolor}
 
 \RequirePackage[colorlinks=true,urlcolor=Blue,citecolor=Green,linkcolor=BrickRed,unicode]{hyperref}
@@ -43,8 +45,6 @@
 
 
 \RequirePackage{graphicx} % essentials
-% \RequirePackage{microtype}
-\RequirePackage{eucal}
 \RequirePackage[nocompress]{cite}       % other convenient stuff
 \RequirePackage{enumerate}
 %\usepackage{pgf,tikz}
